# tutorial-editor

./: .gitignore  CLAUDE.md  README.md  config.toml
components/orch-adapters/: Cargo.toml
components/orch-adapters/crates/orchestrator-adapter-avatar/: Cargo.toml
components/orch-adapters/crates/orchestrator-adapter-avatar/src/: http.rs  lib.rs
components/orch-adapters/crates/orchestrator-adapter-llm/: Cargo.toml
components/orch-adapters/crates/orchestrator-adapter-llm/src/: lib.rs
components/orch-adapters/crates/orchestrator-adapter-mcp/: Cargo.toml
components/orch-adapters/crates/orchestrator-adapter-mcp/src/: client.rs  lib.rs  stub.rs
components/orch-adapters/crates/orchestrator-adapter-tts/: Cargo.toml
components/orch-adapters/crates/orchestrator-adapter-tts/src/: client.rs  lib.rs
components/orch-app/crates/orchestrator-app/: Cargo.toml
components/orch-app/crates/orchestrator-app/src/: builder.rs  lib.rs
components/orch-avatar/: Cargo.toml
components/orch-avatar/crates/orchestrator-avatar-pipeline/: Cargo.toml
components/orch-avatar/crates/orchestrator-avatar-pipeline/src/: lib.rs  ops_impl.rs  ops_trait.rs
components/orch-avatar/crates/orchestrator-avatar-service/: Cargo.toml
components/orch-avatar/crates/orchestrator-avatar-service/src/: lib.rs  ops_impl.rs  ops_trait.rs
components/orch-avatar/crates/orchestrator-script/: Cargo.toml
components/orch-avatar/crates/orchestrator-script/src/: ops_impl.rs  prompts.rs
components/orch-avatar/crates/orchestrator-tts-ops/: Cargo.toml
components/orch-avatar/crates/orchestrator-tts-ops/src/: lib.rs  ops_impl.rs  ops_trait.rs
components/orch-cli/: Cargo.toml
components/orch-cli/crates/orchestrator-cli/: Cargo.toml
components/orch-cli/crates/orchestrator-cli/src/: main.rs
components/orch-db/: Cargo.toml
components/orch-db/crates/orchestrator-db-asset/: Cargo.toml
components/orch-db/crates/orchestrator-db-asset/src/: read.rs  write.rs
components/orch-db/crates/orchestrator-db-core/: Cargo.toml
components/orch-db/crates/orchestrator-db-core/src/: schema.sql
components/orch-db/crates/orchestrator-db-project/: Cargo.toml
components/orch-db/crates/orchestrator-db-project/src/: impl_repo.rs  lib.rs  mapping.rs  struct_def.rs
components/orch-db/crates/orchestrator-db-scene/: Cargo.toml
components/orch-db/crates/orchestrator-db-scene/src/: read.rs  repo.rs  write.rs
components/orch-http-entity/: Cargo.toml
components/orch-http-entity/crates/orchestrator-http-asset/: Cargo.toml
components/orch-http-entity/crates/orchestrator-http-asset/src/: handler.rs  handler_write.rs  lib.rs  routes.rs
components/orch-http-entity/crates/orchestrator-http-project/: Cargo.toml
components/orch-http-entity/crates/orchestrator-http-scene/: Cargo.toml
components/orch-http-gen/crates/orchestrator-http-avatar/: Cargo.toml
components/orch-http/crates/orchestrator-http/: Cargo.toml
components/orch-ops-asset/crates/orchestrator-ops-asset-write/: Cargo.toml
components/orch-ops-scene/crates/orchestrator-ops-scene-write/: Cargo.toml
components/orchestrator/: Cargo.toml
components/orchestrator/crates/orchestrator-adapter-avatar/: Cargo.toml
components/orchestrator/crates/orchestrator-adapter-llm/: Cargo.toml
components/orchestrator/crates/orchestrator-adapter-mcp/: Cargo.toml
components/orchestrator/crates/orchestrator-adapter-tts/: Cargo.toml
components/orchestrator/crates/orchestrator-adapters/: Cargo.toml
components/orchestrator/crates/orchestrator-app/: Cargo.toml
components/orchestrator/crates/orchestrator-avatar-pipeline/: Cargo.toml
components/orchestrator/crates/orchestrator-avatar-service/: Cargo.toml
components/orchestrator/crates/orchestrator-cli/: Cargo.toml  build.rs
components/orchestrator/crates/orchestrator-core/: Cargo.toml
components/orchestrator/crates/orchestrator-db/: Cargo.toml
components/orchestrator/crates/orchestrator-db-asset/: Cargo.toml
components/orchestrator/crates/orchestrator-db-project/: Cargo.toml
components/orchestrator/crates/orchestrator-db-scene/: Cargo.toml
components/orchestrator/crates/orchestrator-domain/: Cargo.toml
components/orchestrator/crates/orchestrator-http/: Cargo.toml
components/orchestrator/crates/orchestrator-http-asset/: Cargo.toml
components/orchestrator/crates/orchestrator-http-avatar/: Cargo.toml
components/orchestrator/crates/orchestrator-http-core/: Cargo.toml
components/orchestrator/crates/orchestrator-http-handlers/: Cargo.toml
components/orchestrator/crates/orchestrator-http-project/: Cargo.toml
components/orchestrator/crates/orchestrator-http-scene/: Cargo.toml
components/orchestrator/crates/orchestrator-http-script/: Cargo.toml
components/orchestrator/crates/orchestrator-ops-asset/: Cargo.toml
components/orchestrator/crates/orchestrator-ops-project/: Cargo.toml
components/orchestrator/crates/orchestrator-ops-scene/: Cargo.toml
components/orchestrator/crates/orchestrator-ports/: Cargo.toml
components/orchestrator/crates/orchestrator-ports-asset/: Cargo.toml
components/orchestrator/crates/orchestrator-ports-project/: Cargo.toml
components/orchestrator/crates/orchestrator-ports-repo/: Cargo.toml
components/orchestrator/crates/orchestrator-ports-scene/: Cargo.toml
components/orchestrator/crates/orchestrator-ports-services/: Cargo.toml
components/orchestrator/crates/orchestrator-script/: Cargo.toml
components/ui-app/: Cargo.toml
components/ui-app/crates/ui-app/: Cargo.toml
components/ui-app/crates/ui-app-callbacks/: Cargo.toml
components/ui-macros/: Cargo.toml
components/ui-macros/crates/ui-macros/: Cargo.toml
components/ui-project/: Cargo.toml
components/ui-project/crates/ui-project/: Cargo.toml
components/ui-scene/: Cargo.toml
components/ui-scene-detail/: Cargo.toml
components/ui-scene-detail/crates/ui-scene-detail/: Cargo.toml
components/ui-scene/crates/ui-scene/: Cargo.toml
components/ui_workbench/: Cargo.toml
components/ui_workbench/crates/ui-app/: Cargo.toml  index.html
components/ui_workbench/crates/ui-core/: Cargo.toml
(+253 files in other folders)
