[workspace]
members = [
    "crates/orchestrator-adapter-llm",
    "crates/orchestrator-adapter-tts",
    "crates/orchestrator-adapter-avatar",
    "crates/orchestrator-adapter-mcp",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
