[workspace]
members = [
    "crates/orchestrator-tts-ops",
    "crates/orchestrator-avatar-service",
    "crates/orchestrator-avatar-pipeline",
    "crates/orchestrator-script",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
