[workspace]
members = [
    "crates/orchestrator-db-core",
    "crates/orchestrator-db-project",
    "crates/orchestrator-db-scene",
    "crates/orchestrator-db-asset",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros", "formatting", "serde", "parsing"] }
tokio = { version = "1", features = ["full"] }
