[workspace]
members = [
    "crates/orchestrator-http-project",
    "crates/orchestrator-http-scene",
    "crates/orchestrator-http-asset",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
