[workspace]
members = [
    "crates/orchestrator-cli",
    "crates/orchestrator-core",
    "crates/orchestrator-http",
    "crates/orchestrator-db",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
