[workspace]
members = [
    # Domain & Ports
    "crates/orchestrator-domain",
    "crates/orchestrator-ports-project",
    "crates/orchestrator-ports-scene",
    "crates/orchestrator-ports-asset",
    "crates/orchestrator-ports-services",

    # Adapters
    "crates/orchestrator-adapter-llm",
    "crates/orchestrator-adapter-tts",
    "crates/orchestrator-adapter-avatar",
    "crates/orchestrator-adapter-mcp",

    # Database
    "crates/orchestrator-db-core",
    "crates/orchestrator-db-project",
    "crates/orchestrator-db-scene",
    "crates/orchestrator-db-asset",

    # Application
    "crates/orchestrator-app",
    "crates/orchestrator-ops-project",
    "crates/orchestrator-ops-scene",
    "crates/orchestrator-ops-asset",
    "crates/orchestrator-avatar-service",
    "crates/orchestrator-avatar-pipeline",
    "crates/orchestrator-script",

    # HTTP
    "crates/orchestrator-http",
    "crates/orchestrator-http-core",
    "crates/orchestrator-http-health",
    "crates/orchestrator-http-project",
    "crates/orchestrator-http-scene",
    "crates/orchestrator-http-asset",
    "crates/orchestrator-http-avatar",
    "crates/orchestrator-http-script",

    # CLI
    "crates/orchestrator-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros", "formatting", "serde", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
