[workspace]
members = ["crates/ui-app", "crates/ui-app-callbacks"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
ui-core = { path = "../ui-core/crates/ui-core" }
ui-api = { path = "../ui-api/crates/ui-api" }
ui-macros = { path = "../ui-macros/crates/ui-macros" }
ui-project = { path = "../ui-project/crates/ui-project" }
ui-scene = { path = "../ui-scene/crates/ui-scene" }
ui-scene-detail = { path = "../ui-scene-detail/crates/ui-scene-detail" }
ui-app-callbacks = { path = "crates/ui-app-callbacks" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
