[workspace]
members = ["crates/ui-macros"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement"] }
