[workspace]
members = ["crates/ui-scene-detail"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
ui-core = { path = "../ui-core/crates/ui-core" }
ui-api = { path = "../ui-api/crates/ui-api" }
ui-asset = { path = "../ui-asset/crates/ui-asset" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
