[workspace]
members = ["crates/ui-scene"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
ui-core = { path = "../ui-core/crates/ui-core" }
ui-macros = { path = "../ui-macros/crates/ui-macros" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement"] }
