[workspace]
members = [
    "crates/ui-core",
    "crates/ui-app",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
yew = "0.21"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
