[package]
name = "orchestrator-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
orchestrator-domain = { path = "../../../orch-domain/crates/orchestrator-domain" }
orchestrator-ports-project = { path = "../../../orch-ports/crates/orchestrator-ports-project" }
orchestrator-ports-scene = { path = "../../../orch-ports/crates/orchestrator-ports-scene" }
orchestrator-ports-asset = { path = "../../../orch-ports/crates/orchestrator-ports-asset" }
orchestrator-ports-services = { path = "../../../orch-ports/crates/orchestrator-ports-services" }
