[package]
name = "orchestrator-http-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
orchestrator-app = { path = "../../../orch-app/crates/orchestrator-app" }
orchestrator-http-core = { path = "../../../orch-http-core/crates/orchestrator-http-core" }
orchestrator-ops-asset-read = { path = "../../../orch-ops-asset/crates/orchestrator-ops-asset-read" }
orchestrator-ops-asset-write = { path = "../../../orch-ops-asset/crates/orchestrator-ops-asset-write" }
