[package]
name = "orchestrator-http-scene"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
orchestrator-app = { path = "../../../orch-app/crates/orchestrator-app" }
orchestrator-http-core = { path = "../../../orch-http-core/crates/orchestrator-http-core" }
orchestrator-ops-scene-read = { path = "../../../orch-ops-scene/crates/orchestrator-ops-scene-read" }
orchestrator-ops-scene-write = { path = "../../../orch-ops-scene/crates/orchestrator-ops-scene-write" }
