[package]
name = "orchestrator-ops-asset-write"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
orchestrator-app = { path = "../../../orch-app/crates/orchestrator-app" }
orchestrator-domain = { path = "../../../orch-domain/crates/orchestrator-domain" }
orchestrator-ops-asset-read = { path = "../orchestrator-ops-asset-read" }
