[package]
name = "orchestrator-adapter-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-ports-services = { path = "../orchestrator-ports-services" }
