[package]
name = "orchestrator-adapters"
version = "0.1.0"
edition.workspace = true

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
anyhow = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
