[package]
name = "orchestrator-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-ports-repo = { path = "../orchestrator-ports-repo" }
orchestrator-ports-services = { path = "../orchestrator-ports-services" }
