[package]
name = "orchestrator-avatar-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
orchestrator-app = { path = "../orchestrator-app" }
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-avatar-service = { path = "../orchestrator-avatar-service" }
orchestrator-ops-asset = { path = "../orchestrator-ops-asset" }
orchestrator-ops-scene = { path = "../orchestrator-ops-scene" }
