[package]
name = "orchestrator-db-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
rusqlite = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
orchestrator-db-core = { path = "../orchestrator-db-core" }
orchestrator-domain = { path = "../orchestrator-domain" }
orchestrator-ports-asset = { path = "../orchestrator-ports-asset" }
